; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if_lagg.c_lagg_rr_input.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if_lagg.c_lagg_rr_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lagg_softc = type { %struct.ifnet* }
%struct.ifnet = type { i32 }
%struct.lagg_port = type { i32 }
%struct.mbuf = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.ifnet* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mbuf* (%struct.lagg_softc*, %struct.lagg_port*, %struct.mbuf*)* @lagg_rr_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mbuf* @lagg_rr_input(%struct.lagg_softc* %0, %struct.lagg_port* %1, %struct.mbuf* %2) #0 {
  %4 = alloca %struct.lagg_softc*, align 8
  %5 = alloca %struct.lagg_port*, align 8
  %6 = alloca %struct.mbuf*, align 8
  %7 = alloca %struct.ifnet*, align 8
  store %struct.lagg_softc* %0, %struct.lagg_softc** %4, align 8
  store %struct.lagg_port* %1, %struct.lagg_port** %5, align 8
  store %struct.mbuf* %2, %struct.mbuf** %6, align 8
  %8 = load %struct.lagg_softc*, %struct.lagg_softc** %4, align 8
  %9 = getelementptr inbounds %struct.lagg_softc, %struct.lagg_softc* %8, i32 0, i32 0
  %10 = load %struct.ifnet*, %struct.ifnet** %9, align 8
  store %struct.ifnet* %10, %struct.ifnet** %7, align 8
  %11 = load %struct.ifnet*, %struct.ifnet** %7, align 8
  %12 = load %struct.mbuf*, %struct.mbuf** %6, align 8
  %13 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store %struct.ifnet* %11, %struct.ifnet** %14, align 8
  %15 = load %struct.mbuf*, %struct.mbuf** %6, align 8
  ret %struct.mbuf* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
